update mobile menu

--- a/src/policy.html
+++ b/src/policy.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QPICKSERVICES || WEB LAYOUT</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
@@ -110,76 +111,50 @@
                   <div class="service_menu__inner">
                     <div>
                       <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                           <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Nidhi Company Registration</a></li>
+                            <li><a href="#">Producer Company Registration</a></li>
+                            <li><a href="#">Private Limited Company Registration</a></li>
+                            <li><a href="#">Public Limited Company Registration</a></li>
+                            <li><a href="#">Trust Registration</a></li>
+                            <li><a href="#">Society Registration</a></li>
+                            <li><a href="#">Section 8 Company Registration</a></li>
+                            <li><a href="#">NGO Registration</a></li>
                           </ul>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                           <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Partnership Registration</a></li>
+                            <li><a href="#">Proprietorship Registration</a></li>
+                            <li><a href="#">ISO Registration</a></li>
+                            <li><a href="#">State Shop & Establishment Registration</a></li>
+                            <li><a href="#">Udyam Aadhar Registration</a></li>
+                            <li><a href="#">Trademark Registration</a></li>
+                            <li><a href="#">GEM Portal Registration</a></li>
+                            <li><a href="#">State Tender Registration</a></li>
                           </ul>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2">
                           <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Fssai Registration</a></li>
+                            <li><a href="#">Digital Sigtature</a></li>
+                            <li><a href="#">Gst Registration</a></li>
+                            <li><a href="#">Psara Registration</a></li>
+                            <li><a href="#">Gst Return </a></li>
+                            <li><a href="#">EPF Registration</a></li>
+                            <li><a href="#">ESI Registration</a></li>
+                            <li><a href="#">Rera Registration</a></li>
                           </ul>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2">
                           <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-3">
-                          <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-3">
-                          <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-3">
-                          <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-md-3">
-                          <ul>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
-                            <li><a href="#">Links</a></li>
+                            <li><a href="#">Roc Return</a></li>
+                            <li><a href="#">Epf Return</a></li>
+                            <li><a href="#">Esi Return</a></li>
+                            <li><a href="#">Tds Return</a></li>
+                            <li><a href="#">Rera Return</a></li>
+                            <li><a href="#">Itr Filing</a></li>
                           </ul>
                         </div>
                       </div>
@@ -880,42 +855,52 @@
     <div class="overlay">
         <!-- Mobile -->
         <div class="mobile">
-            <div class="mobile-logo">
-               <a href="./"> <img src="./images/qpick-logo.png" alt="Site logo"></a>
-            </div>
-            <nav>
-                <a class="qpk-mobile--button" href="./">Home</a>
-                <a class="qpk-mobile--button qpk__menu">Product</a>
-                <ul class="menu__panel">
-                    <li><a href="#">Product nav</a></li>
-                    <li><a href="#">Product nav</a></li>
-                    <li><a href="#">Product nav</a></li>
-                    <a class="qpk-mobile--button qpk__menu">Inner Menu</a>
-                    <ul class="menu__panel">
-                        <li><a href="#">Inner nav</a></li>
-                        <li><a href="#">Inner nav</a></li>
-                        <li><a href="#">Inner nav</a></li>
-                        <li><a href="#">Inner nav</a></li>
-                    </ul>
-                </ul>
-
-                <a class="qpk-mobile--button qpk__menu">Category</a>
-                <ul class="menu__panel">
-                    <li><a href="#">Category nav</a></li>
-                    <li><a href="#">Category nav</a></li>
-                    <li><a href="#">Category nav</a></li>
-                    <li><a href="#">Category nav</a></li>
-                </ul>
-
-                <a class="qpk-mobile--button qpk__menu">Services</a>
-                <ul class="menu__panel">
-                    <li><a href="#">Services nav</a></li>
-                    <li><a href="#">Services nav</a></li>
-                    <li><a href="#">Services nav</a></li>
-                    <li><a href="#">Services nav</a></li>
-                </ul>
-            </nav>
-
+          <div class="mobile-logo">
+            <a href="./">
+              <img src="./images/qpick-logo.png" alt="">
+             </a>
+          </div>
+          <nav>
+            <a class="qpk-mobile--button" href="./">Home</a>
+            <a class="qpk-mobile--button" href="./about.html">About</a>
+            <a class="qpk-mobile--button" href="#">Services</a>
+            <a class="qpk-mobile--button qpk__menu">Quick Links</a>
+            <ul class="menu__panel">
+              <li><a href="#">Nidhi Company Registration</a></li>
+              <li><a href="#">Producer Company Registration</a></li>
+              <li><a href="#">Private Limited Company Registration</a></li>
+              <li><a href="#">Public Limited Company Registration</a></li>
+              <li><a href="#">Trust Registration</a></li>
+              <li><a href="#">Society Registration</a></li>
+              <li><a href="#">Section 8 Company Registration</a></li>
+              <li><a href="#">NGO Registration</a></li>
+              <li><a href="#">Partnership Registration</a></li>
+              <li><a href="#">Proprietorship Registration</a></li>
+              <li><a href="#">ISO Registration</a></li>
+              <li><a href="#">State Shop & Establishment Registration</a></li>
+              <li><a href="#">Udyam Aadhar Registration</a></li>
+              <li><a href="#">Trademark Registration</a></li>
+              <li><a href="#">GEM Portal Registration</a></li>
+              <li><a href="#">State Tender Registration</a></li>
+              <li><a href="#">Fssai Registration</a></li>
+              <li><a href="#">Digital Sigtature</a></li>
+              <li><a href="#">Gst Registration</a></li>
+              <li><a href="#">Psara Registration</a></li>
+              <li><a href="#">Gst Return </a></li>
+              <li><a href="#">EPF Registration</a></li>
+              <li><a href="#">ESI Registration</a></li>
+              <li><a href="#">Rera Registration</a></li>
+              <li><a href="#">Roc Return</a></li>
+              <li><a href="#">Epf Return</a></li>
+              <li><a href="#">Esi Return</a></li>
+              <li><a href="#">Tds Return</a></li>
+              <li><a href="#">Rera Return</a></li>
+              <li><a href="#">Itr Filing</a></li>
+            </ul>
+            <a href="./contact.html" class="qpk-mobile--button">Contact</a>
+            <a href="#" class="qpk-mobile--button">Blog</a>
+          </nav>
+    
         </div>
         <!-- /Mobile -->
     </div>
