--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>QPICKSERVICES || WEB LAYOUT</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
@@ -111,76 +112,50 @@
               <div class="service_menu__inner">
                 <div>
                   <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                       <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
+                        <li><a href="#">Nidhi Company Registration</a></li>
+                        <li><a href="#">Producer Company Registration</a></li>
+                        <li><a href="#">Private Limited Company Registration</a></li>
+                        <li><a href="#">Public Limited Company Registration</a></li>
+                        <li><a href="#">Trust Registration</a></li>
+                        <li><a href="#">Society Registration</a></li>
+                        <li><a href="#">Section 8 Company Registration</a></li>
+                        <li><a href="#">NGO Registration</a></li>
                       </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                       <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
+                        <li><a href="#">Partnership Registration</a></li>
+                        <li><a href="#">Proprietorship Registration</a></li>
+                        <li><a href="#">ISO Registration</a></li>
+                        <li><a href="#">State Shop & Establishment Registration</a></li>
+                        <li><a href="#">Udyam Aadhar Registration</a></li>
+                        <li><a href="#">Trademark Registration</a></li>
+                        <li><a href="#">GEM Portal Registration</a></li>
+                        <li><a href="#">State Tender Registration</a></li>
                       </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                       <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
+                        <li><a href="#">Fssai Registration</a></li>
+                        <li><a href="#">Digital Sigtature</a></li>
+                        <li><a href="#">Gst Registration</a></li>
+                        <li><a href="#">Psara Registration</a></li>
+                        <li><a href="#">Gst Return </a></li>
+                        <li><a href="#">EPF Registration</a></li>
+                        <li><a href="#">ESI Registration</a></li>
+                        <li><a href="#">Rera Registration</a></li>
                       </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                       <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                      </ul>
-                    </div>
-                    <div class="col-md-3">
-                      <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                      </ul>
-                    </div>
-                    <div class="col-md-3">
-                      <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                      </ul>
-                    </div>
-                    <div class="col-md-3">
-                      <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                      </ul>
-                    </div>
-                    <div class="col-md-3">
-                      <ul>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
-                        <li><a href="#">Links</a></li>
+                        <li><a href="#">Roc Return</a></li>
+                        <li><a href="#">Epf Return</a></li>
+                        <li><a href="#">Esi Return</a></li>
+                        <li><a href="#">Tds Return</a></li>
+                        <li><a href="#">Rera Return</a></li>
+                        <li><a href="#">Itr Filing</a></li>
                       </ul>
                     </div>
                   </div>
@@ -498,7 +473,7 @@
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/life-insurance.png" alt="ROC Return">
+                    <img src="./images/roc-return.svg" alt="ROC Return">
                     <h4>ROC Return</h4>
                   </a>
                 </div>
@@ -506,7 +481,7 @@
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/life-insurance.png" alt="EPF Return">
+                    <img src="./images/epf-return.svg" alt="EPF Return">
                     <h4>EPF Return</h4>
                   </a>
                 </div>
@@ -514,7 +489,7 @@
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/life-insurance.png" alt="ESI Return">
+                    <img src="./images/esi-return.svg" alt="ESI Return">
                     <h4>ESI Return</h4>
                   </a>
                 </div>
@@ -530,7 +505,7 @@
               <div class="col-6 col-md-3 col-xl-2">
                 <div class="services-item">
                   <a href="#">
-                    <img src="./images/life-insurance.png" alt="Rera Return">
+                    <img src="./images/rera-return.svg" alt="Rera Return">
                     <h4>Rera Return</h4>
                   </a>
                 </div>
@@ -1086,36 +1061,44 @@
          </a>
       </div>
       <nav>
-        <a class="qpk-mobile--button" href="#">Home</a>
-        <a class="qpk-mobile--button qpk__menu">Product</a>
+        <a class="qpk-mobile--button" href="./">Home</a>
+        <a class="qpk-mobile--button" href="./about.html">About</a>
+        <a class="qpk-mobile--button" href="#">Services</a>
+        <a class="qpk-mobile--button qpk__menu">Quick Links</a>
         <ul class="menu__panel">
-          <li><a href="#">Product nav</a></li>
-          <li><a href="#">Product nav</a></li>
-          <li><a href="#">Product nav</a></li>
-          <a class="qpk-mobile--button qpk__menu">Inner Menu</a>
-            <ul class="menu__panel">
-              <li><a href="#">Inner nav</a></li>
-              <li><a href="#">Inner nav</a></li>
-              <li><a href="#">Inner nav</a></li>
-              <li><a href="#">Inner nav</a></li>
-            </ul>
+          <li><a href="#">Nidhi Company Registration</a></li>
+          <li><a href="#">Producer Company Registration</a></li>
+          <li><a href="#">Private Limited Company Registration</a></li>
+          <li><a href="#">Public Limited Company Registration</a></li>
+          <li><a href="#">Trust Registration</a></li>
+          <li><a href="#">Society Registration</a></li>
+          <li><a href="#">Section 8 Company Registration</a></li>
+          <li><a href="#">NGO Registration</a></li>
+          <li><a href="#">Partnership Registration</a></li>
+          <li><a href="#">Proprietorship Registration</a></li>
+          <li><a href="#">ISO Registration</a></li>
+          <li><a href="#">State Shop & Establishment Registration</a></li>
+          <li><a href="#">Udyam Aadhar Registration</a></li>
+          <li><a href="#">Trademark Registration</a></li>
+          <li><a href="#">GEM Portal Registration</a></li>
+          <li><a href="#">State Tender Registration</a></li>
+          <li><a href="#">Fssai Registration</a></li>
+          <li><a href="#">Digital Sigtature</a></li>
+          <li><a href="#">Gst Registration</a></li>
+          <li><a href="#">Psara Registration</a></li>
+          <li><a href="#">Gst Return </a></li>
+          <li><a href="#">EPF Registration</a></li>
+          <li><a href="#">ESI Registration</a></li>
+          <li><a href="#">Rera Registration</a></li>
+          <li><a href="#">Roc Return</a></li>
+          <li><a href="#">Epf Return</a></li>
+          <li><a href="#">Esi Return</a></li>
+          <li><a href="#">Tds Return</a></li>
+          <li><a href="#">Rera Return</a></li>
+          <li><a href="#">Itr Filing</a></li>
         </ul>
-
-        <a class="qpk-mobile--button qpk__menu">Category</a>
-        <ul class="menu__panel">
-          <li><a href="#">Category nav</a></li>
-          <li><a href="#">Category nav</a></li>
-          <li><a href="#">Category nav</a></li>
-          <li><a href="#">Category nav</a></li>
-        </ul>
-
-        <a class="qpk-mobile--button qpk__menu">Services</a>
-        <ul class="menu__panel">
-          <li><a href="#">Services nav</a></li>
-          <li><a href="#">Services nav</a></li>
-          <li><a href="#">Services nav</a></li>
-          <li><a href="#">Services nav</a></li>
-        </ul>
+        <a href="./contact.html" class="qpk-mobile--button">Contact</a>
+        <a href="#" class="qpk-mobile--button">Blog</a>
       </nav>
 
     </div>
