--- a/src/contact.html
+++ b/src/contact.html
@@ -41,7 +41,7 @@
                             <ul>
                                 <li><a href="./">Home</a></li>
                                 <li><a href="./about.html">About</a></li>
-                                <li><a href="#">Services</a></li>
+                                <li><a href="./services.html">Services</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
                                 <li><a href="#">Blog</a></li>
                             </ul>
@@ -254,10 +254,11 @@
             <div class="site-container">
                 <div class="callus">
                     <div class="callus--left">
-                        <h4>Contact us for more information, or book an appointment</h4>
+                        <h4>Want To Earn?</h4>
+                        <p>Become Independent Franchise</p>
                     </div>
                     <div class="callus--right">
-                        <a href="#" class="btn btn--default">Call us today</a>
+                        <a href="#" class="btn btn--default">Connect With Us!</a>
                     </div>
                 </div>
             </div>
