--- a/src/index.html
+++ b/src/index.html
@@ -983,7 +983,7 @@
                   <h3>Our Services</h3>
                   <ul class="ft-items--links">
                     <li><a href="#">Business Support Services</a></li>
-                    <li><a href="#">Common Services Centre</a></li>
+                    <li><a href="#">E-Distt. Support Services</a></li>
                     <li><a href="#">Recharge & Bill Payments</a></li>
                     <li><a href="#">Banking Support Services</a></li>
                     <li><a href="#">IT Support Services</a></li>
@@ -1064,7 +1064,7 @@
       <nav>
         <a class="qpk-mobile--button" href="./">Home</a>
         <a class="qpk-mobile--button" href="./about.html">About</a>
-        <a class="qpk-mobile--button" href="#">Services</a>
+        <a class="qpk-mobile--button" href="./services.html">Services</a>
         <a class="qpk-mobile--button qpk__menu">Quick Links</a>
         <ul class="menu__panel">
           <li><a href="#">Nidhi Company Registration</a></li>
