--- a/src/login.html
+++ b/src/login.html
@@ -113,7 +113,9 @@
               </div>
           </div>
        </div>
+       <!-- /LOGIN -->
    </div>
+   <!-- /WRAPPER -->
 
   <script src="assets/js/scrpit.js"></script>
 </body>
