--- a/src/services.html
+++ b/src/services.html
@@ -590,7 +590,7 @@
           <nav>
             <a class="qpk-mobile--button" href="./">Home</a>
             <a class="qpk-mobile--button" href="./about.html">About</a>
-            <a class="qpk-mobile--button" href="#">Services</a>
+            <a class="qpk-mobile--button" href="./services.html">Services</a>
             <a class="qpk-mobile--button qpk__menu">Quick Links</a>
             <ul class="menu__panel">
               <li><a href="#">Nidhi Company Registration</a></li>
